# finnhub-mcp

./: .env.example  README.md  pyproject.toml  server.py
