[project]
name = "finnhub-mcp"
version = "0.1.0"
description = "FastMCP server wrapping Finnhub API endpoints (free or premium tier)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
finnhub-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
